# python-cli-todo

./: LICENSE  docker-compose.yml
app/: README.md  pyproject.toml
app/.devcontainer/: devcontainer.json
app/cli-todo/src/: main.py  test.py
app/cli-todo/src/controller/: todos_controller.py
app/cli-todo/src/exceptions/: todo_not_found_error.py
app/cli-todo/src/model/: db_connection.py  db_operation.py  todos_model.py
app/cli-todo/src/view/: todos_view.py
doc/ddl/: data.sql  schema.sql
docker/app/: Dockerfile
docker/db/: Dockerfile
