[tool.poetry]
name = "cli-todo"
version = "0.1.0"
description = "python cli todo"
authors = ["Anonymous <anonymous@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pydantic = "^2.3.0"
pymysql = "^1.1.0"
cryptography = "^42.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
mypy = "^1.5.1"
pytest = "^7.4.2"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
exclude = [
    ".venv/",
    ".ruff_cache/",
    ".pytest_cache/",
    ".mypy_cache/"
]

[tool.mypy-overrides]
[[tool.mypy.overrides]]
module = [
    "pymysql",
    "pymysql.*",
    "model.todos_model",
    "view.todos_view",
    "controller.todos_controller",
    "model.db_connection",
    "model.db_operation",
    "exceptions.todo_not_found_error"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["B", "E", "F", "I", "N", "W", "YTT", "PL"]

[tool.black]
target-version = ["py311"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"